Sutter Health/src/objects/SHP_Plans__c.object
<CustomObject>
    <fields>
        <fullName>Acu_Chiro__c</fullName>
        <label>Acu/Chiro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA01</fullName>
                </value>
                <value>
                    <fullName>CA02</fullName>
                </value>
                <value>
                    <fullName>CA03</fullName>
                </value>
                <value>
                    <fullName>CA04</fullName>
                </value>
                <value>
                    <fullName>CA05</fullName>
                </value>
                <value>
                    <fullName>CA06</fullName>
                </value>
                <value>
                    <fullName>CA07</fullName>
                </value>
                <value>
                    <fullName>CA08</fullName>
                </value>
                <value>
                    <fullName>CA09</fullName>
                </value>
                <value>
                    <fullName>CA10</fullName>
                </value>
                <value>
                    <fullName>CA11</fullName>
                </value>
                <value>
                    <fullName>CA12</fullName>
                </value>
                <value>
                    <fullName>CA13</fullName>
                </value>
                <value>
                    <fullName>CA14</fullName>
                </value>
                <value>
                    <fullName>CA15</fullName>
                </value>
                <value>
                    <fullName>CA16</fullName>
                </value>
                <value>
                    <fullName>AA01</fullName>
                </value>
                <value>
                    <fullName>AA02</fullName>
                </value>
                <value>
                    <fullName>AA03</fullName>
                </value>
                <value>
                    <fullName>AA04</fullName>
                </value>
                <value>
                    <fullName>AA05</fullName>
                </value>
                <value>
                    <fullName>AA06</fullName>
                </value>
                <value>
                    <fullName>AA07</fullName>
                </value>
                <value>
                    <fullName>AA08</fullName>
                </value>
                <value>
                    <fullName>AA09</fullName>
                </value>
                <value>
                    <fullName>AA10</fullName>
                </value>
                <value>
                    <fullName>AA11</fullName>
                </value>
                <value>
                    <fullName>AA12</fullName>
                </value>
                <value>
                    <fullName>AA13</fullName>
                </value>
                <value>
                    <fullName>AA14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_Banded_Rate__c</fullName>
        <label>Age Banded Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buy_Ups__c</fullName>
        <label>Buy Ups</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance__c</fullName>
        <label>CoInsurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CoinsuranceF__c</fullName>
        <formula>CoInsurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coinsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DeductibleF__c</fullName>
        <formula>Deductible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <label>Dental</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DL03</fullName>
                </value>
                <value>
                    <fullName>DL02</fullName>
                </value>
                <value>
                    <fullName>DL01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EE_CC_Rate__c</fullName>
        <label>EE + CC Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Family_Rate__c</fullName>
        <label>EE + Family Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Rate__c</fullName>
        <label>EE Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_S_Rate__c</fullName>
        <label>EE + S Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOPMF__c</fullName>
        <formula>OOPM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OOPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOPM__c</fullName>
        <label>OOPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PCPF__c</fullName>
        <formula>PCP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PCP__c</fullName>
        <label>PCP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ML01 - LG Standard $10 - $500</fullName>
                </value>
                <value>
                    <fullName>ML02 - LG Standard $20 - $500 (Rx $100)</fullName>
                </value>
                <value>
                    <fullName>ML03 - LG Standard $20 - $1000</fullName>
                </value>
                <value>
                    <fullName>ML04 - LG Standard $30 - $1000 (Rx $100)</fullName>
                </value>
                <value>
                    <fullName>ML05 - LG Standard $30 - $1000 (Rx $250)</fullName>
                </value>
                <value>
                    <fullName>ML06 - LG Standard $20 - $1500</fullName>
                </value>
                <value>
                    <fullName>ML07 - LG Standard $40 - $1500</fullName>
                </value>
                <value>
                    <fullName>ML08 - LG Standard $20 - $2000</fullName>
                </value>
                <value>
                    <fullName>ML09 - LG Standard $40 - $2500</fullName>
                </value>
                <value>
                    <fullName>ML10 - LG Standard $40 - $3000</fullName>
                </value>
                <value>
                    <fullName>ML11 - LG Coinsurance 10% - $250</fullName>
                </value>
                <value>
                    <fullName>ML12 - LG Coinsurance 20% - $500</fullName>
                </value>
                <value>
                    <fullName>ML13 - LG Coinsurance 30% - $500</fullName>
                </value>
                <value>
                    <fullName>ML14 - LG Coinsurance 20% - $1000</fullName>
                </value>
                <value>
                    <fullName>ML15 - LG Coinsurance 30% - $1000</fullName>
                </value>
                <value>
                    <fullName>ML16 - LG Split $10/$20 - $250</fullName>
                </value>
                <value>
                    <fullName>ML17 - LG Split $10/$20 - $500</fullName>
                </value>
                <value>
                    <fullName>ML18 - LG Split $20/$40 - $500</fullName>
                </value>
                <value>
                    <fullName>ML19 - LG HSP $10 - $250 - 10%</fullName>
                </value>
                <value>
                    <fullName>ML20 - LG HSP $20 - $500 - 10%</fullName>
                </value>
                <value>
                    <fullName>ML21 - LG HSP $20 - $1000 - 20%</fullName>
                </value>
                <value>
                    <fullName>ML22 - LG HSP $20 - $1500 - 20%</fullName>
                </value>
                <value>
                    <fullName>ML23 - LG HSP $20 - $1500 - 30%</fullName>
                </value>
                <value>
                    <fullName>ML24 - LG HSP $20 - $2500 - 20%</fullName>
                </value>
                <value>
                    <fullName>ML25 - LG HSP $20 - $3000 - 30%</fullName>
                </value>
                <value>
                    <fullName>HL01 / HL51 - LG HDHP $20 - $1500 (HSA Eligible)</fullName>
                </value>
                <value>
                    <fullName>HL02 / HL52 - LG HDHP $40 - $2500 (HSA Eligible)</fullName>
                </value>
                <value>
                    <fullName>HL03 / HL53 - LG HDHP 10% - $1500 (HSA Eligible)</fullName>
                </value>
                <value>
                    <fullName>HL04 / HL54 - LG HDHP 20% - $2500 (HSA Eligible)</fullName>
                </value>
                <value>
                    <fullName>ML30 - LG Standard $10 - $0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Against1__c</fullName>
        <label>Quote Against</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-00002</fullName>
                </value>
                <value>
                    <fullName>C-00004</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Against__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Against</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Quote__c</field>
                <operation>equals</operation>
                <valueField>Competitor_Plan__c.Quote__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitor_Plan__c</referenceTo>
        <relationshipLabel>SHP Plans</relationshipLabel>
        <relationshipName>SHP_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Slice</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipName>SHP_Planss</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RX_Deductible_Formula__c</fullName>
        <formula>RX_Deductible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RX Deductible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Deductible__c</fullName>
        <label>RX Deductible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_1_Formula__c</fullName>
        <formula>RX_Tier_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RX Tier 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_1__c</fullName>
        <label>RX Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_2_Formula__c</fullName>
        <formula>RX_Tier_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RX Tier 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_2__c</fullName>
        <label>RX Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_3_Formula__c</fullName>
        <formula>RX_Tier_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RX Tier 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_3__c</fullName>
        <label>RX Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Increase__c</fullName>
        <label>Renewal Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SHP_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SHP Product</label>
        <referenceTo>SHP_Product__c</referenceTo>
        <relationshipLabel>SHP Plans</relationshipLabel>
        <relationshipName>SHP_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPCF__c</fullName>
        <formula>SPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPC__c</fullName>
        <label>SPC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VA01</fullName>
                </value>
                <value>
                    <fullName>VE01</fullName>
                </value>
                <value>
                    <fullName>VA02</fullName>
                </value>
                <value>
                    <fullName>VE02</fullName>
                </value>
                <value>
                    <fullName>VA03</fullName>
                </value>
                <value>
                    <fullName>VE03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SHP Plan</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>SHP Plans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SHP Plans</pluralLabel>
    <recordTypes>
        <fullName>SHP_Plan_RecType</fullName>
        <active>true</active>
        <label>SHP Plan RecType</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>